ok bootstrap stopping point for today. Todo: background color, text wrap, contact + gallery pages

--- a/style.css
+++ b/style.css
@@ -33,9 +33,8 @@ h2 {
   background-color: #51b86e;
   z-index: 9999;
   border: 0;
-  font-size: 12px !important;
+  font-size: 16px !important;
   line-height: 1.42857143 !important;
-  letter-spacing: 2px;
   border-radius: 0;
 }
 
